Build iteration 2 of canonical nav w/o ubuntu interaction

--- a/docs/examples/templates/animated-suru.html
+++ b/docs/examples/templates/animated-suru.html
@@ -3,7 +3,7 @@ layout: examples
 title: Animated suru pattern
 category: _templates
 ---
-<header class="gn-container">
+<header class="gn-container gn-1">
   <div class="gn-overlay"></div>
   <div class="gn-primary-nav">
     <div class="gn-primary-nav__row">
