--- a/docs/examples/templates/canonical-ubuntu-navs.html
+++ b/docs/examples/templates/canonical-ubuntu-navs.html
@@ -3,7 +3,7 @@ layout: examples
 title: Canonical and Ubuntu navs
 category: _templates
 ---
-<header class="gn-container gn-small">
+<header class="gn-container gn-2 gn-small">
   <div class="gn-overlay"></div>
   <div class="gn-primary-nav">
     <div class="gn-primary-nav__row">
@@ -117,7 +117,7 @@ category: _templates
             </div>
           </li>
         </ul>
-        <h3 class="gn-subtitle u-no-margin--bottom">Also from Canonical</h3>
+        <h3 class="gn-subtitle">Also from Canonical</h3>
         <ul class="gn-matrix">
           <li class="gn-matrix__item">
             <a class="gn-link">
@@ -349,35 +349,35 @@ category: _templates
             <p class="gn-small-text">Your approach is consultative, you are results and goal oriented, and you know how to choose where to invest your time to maximise the benefit for the company and customers.</p>
           </div>
           <div class="gn-divided-row__item">
-            <h3 style="margin: 6px 0 3px; font-weight: 300;" class="gn-subtitle">Explore opportunities in</h3>
+            <h3 class="gn-heading gn-opportunities">Explore opportunities in</h3>
             <ul class="gn-list">
               <li>
-                <h4 style="margin-bottom: .125rem">
+                <h4 class="gn-heading-link">
                   <a class="gn-link">Marketing&nbsp;&rsaquo;</a>
                 </h4>
               </li>
               <li>
-                <h4 style="margin-bottom: .125rem">
+                <h4 class="gn-heading-link">
                   <a class="gn-link">Design&nbsp;&rsaquo;</a>
                 </h4>
               </li>
               <li>
-                <h4 style="margin-bottom: .125rem">
+                <h4 class="gn-heading-link">
                   <a class="gn-link">Finance&nbsp;&rsaquo;</a>
                 </h4>
               </li>
               <li>
-                <h4 style="margin-bottom: .125rem">
+                <h4 class="gn-heading-link">
                   <a class="gn-link">Legal&nbsp;&rsaquo;</a>
                 </h4>
               </li>
               <li>
-                <h4 style="margin-bottom: .125rem">
+                <h4 class="gn-heading-link">
                   <a class="gn-link">Admin&nbsp;&rsaquo;</a>
                 </h4>
               </li>
               <li>
-                <h4 style="margin-bottom: .125rem">
+                <h4 class="gn-heading-link">
                   <a class="gn-link">HR&nbsp;&rsaquo;</a>
                 </h4>
               </li>
@@ -400,25 +400,25 @@ category: _templates
         </div>
         <div class="gn-divided-row">
           <div class="gn-divided-row__item">
-            <p style="margin-bottom: .5rem" class="gn-small-text">EMEA | Americas | Asia-Pacific</p>
+            <p class="gn-muted-text">EMEA | Americas | Asia-Pacific</p>
             <h4 class="u-no-padding--top">
               <a>Apply now&nbsp;&rsaquo;</a>
             </h4>
           </div>
           <div class="gn-divided-row__item">
-            <p style="margin-bottom: .5rem" class="gn-small-text">EMEA | Americas | Asia-Pacific</p>
+            <p class="gn-muted-text">EMEA | Americas | Asia-Pacific</p>
             <h4 class="u-no-padding--top">
               <a>Apply now&nbsp;&rsaquo;</a>
             </h4>
           </div>
           <div class="gn-divided-row__item">
-            <p style="margin-bottom: .5rem" class="gn-small-text">EMEA | Americas | Asia-Pacific</p>
+            <p class="gn-muted-text">EMEA | Americas | Asia-Pacific</p>
             <h4 class="u-no-padding--top">
               <a>Apply now&nbsp;&rsaquo;</a>
             </h4>
           </div>
           <div class="gn-divided-row__item">
-            <p style="margin-bottom: .5rem" class="gn-small-text">In every time zone</p>
+            <p class="gn-muted-text">In every time zone</p>
             <h4 class="u-no-padding--top">
               <a>See all open roles&nbsp;&rsaquo;</a>
             </h4>
@@ -446,6 +446,54 @@ category: _templates
       <div class="gn-suru--8"></div>
       <div class="gn-suru--9"></div>
       <div class="gn-suru--10"></div>
+    </div>
+  </div>
+  <div class="gn-secondary-nav">
+    <div id="products-secondary-row" class="gn-secondary-nav__row">
+      <a class="gn-secondary-nav__link is-active">Ubuntu</a>
+      <a class="gn-secondary-nav__link">Enterprise Support & Security</a>
+      <a class="gn-secondary-nav__link">Landscape</a>
+      <a class="gn-secondary-nav__link">MAAS</a>
+      <a class="gn-secondary-nav__link">LXD</a>
+      <a class="gn-secondary-nav__link">Juju</a>
+      <a class="gn-secondary-nav__link">OpenStack</a>
+      <a class="gn-secondary-nav__link">Kubernetes</a>
+      <a class="gn-secondary-nav__link">Snaps</a>
+      <a class="gn-secondary-nav__link">Ubuntu Image Service</a>
+      <a class="gn-secondary-nav__link">Cloud-init</a>
+      <a class="gn-secondary-nav__link">Mir</a>
+      <a class="gn-secondary-nav__link">Conjure-up</a>
+      <a class="gn-secondary-nav__link">Netplan</a>
+      <a class="gn-secondary-nav__link">Multipass</a>
+    </div>
+    <div id="partners-secondary-row" class="gn-secondary-nav__row">
+      <a class="gn-secondary-nav__link is-active">Cloud</a>
+      <a class="gn-secondary-nav__link">Server</a>
+      <a class="gn-secondary-nav__link">Desktop</a>
+      <a class="gn-secondary-nav__link">Silicon</a>
+      <a class="gn-secondary-nav__link">OpenStack</a>
+      <a class="gn-secondary-nav__link">Apps & Snaps</a>
+      <a class="gn-secondary-nav__link">Resellers</a>
+      <a class="gn-secondary-nav__link">Devices & IoT</a>
+      <a class="gn-secondary-nav__link">Charms</a>
+      <a class="gn-secondary-nav__link">Hosting</a>
+      <a class="gn-secondary-nav__link">System Integrators</a>
+      <a class="gn-secondary-nav__link">Training</a>
+      <a class="gn-secondary-nav__link">Kubernetes</a>
+      <a class="gn-secondary-nav__link">PAAS</a>
+      <a class="gn-secondary-nav__link">Serverless</a>
+    </div>
+    <div id="careers-secondary-row" class="gn-secondary-nav__row">
+      <a class="gn-secondary-nav__link is-active">All roles</a>
+      <a class="gn-secondary-nav__link">Engineering</a>
+      <a class="gn-secondary-nav__link">Operations</a>
+      <a class="gn-secondary-nav__link">Sales</a>
+      <a class="gn-secondary-nav__link">Marketing</a>
+      <a class="gn-secondary-nav__link">Design</a>
+      <a class="gn-secondary-nav__link">Finance</a>
+      <a class="gn-secondary-nav__link">Legal</a>
+      <a class="gn-secondary-nav__link">Admin</a>
+      <a class="gn-secondary-nav__link">HR</a>
     </div>
   </div>
 </header>
@@ -684,6 +732,13 @@ category: _templates
     </div>
   </div>
 </section>
+<div style="position:fixed;bottom:0;right:0.5rem;">
+  <label for="iteration">Iteration</label>
+  <select id="iteration">
+    <option value="gn-2" selected="">Iteration 2</option>
+    <option value="gn-1">Iteration 1</option>
+  </select>
+</div>
 
 <script>
   const globalNav = document.querySelector('.gn-container');
@@ -691,6 +746,7 @@ category: _templates
   const dropdown = globalNav.querySelector('.gn-dropdown');
   const dropdownContents = globalNav.querySelectorAll('.gn-dropdown__container');
   const primaryButtons = globalNav.querySelectorAll('.gn-primary-nav__button');
+  const iterationSelect = document.querySelector('#iteration');
 
   const closeMenu = () => {
     primaryButtons.forEach(button => button.classList.remove('is-open'));
@@ -742,6 +798,11 @@ category: _templates
         closeMenu();
       }
     }
+  });
+
+  iterationSelect.addEventListener('change', e => {
+    globalNav.classList.remove('gn-1', 'gn-2');
+    globalNav.classList.add(e.target.value);
   });
 
   const canonicalContent = document.querySelector('#canonical-content');
