Build iteration 2 of interaction with ubuntu nav

--- a/docs/examples/templates/canonical-nav.html
+++ b/docs/examples/templates/canonical-nav.html
@@ -497,7 +497,7 @@ category: _templates
     </div>
   </div>
 </header>
-<div style="position:fixed;bottom:0;right:0.5rem;">
+<div class="gn-controls">
   <label class="js-small-switch">
     Small variant
     <input type="checkbox" class="p-switch">
