--- a/docs/examples/templates/canonical-nav.html
+++ b/docs/examples/templates/canonical-nav.html
@@ -3,7 +3,7 @@ layout: examples
 title: Canonical nav
 category: _templates
 ---
-<header class="gn-container gn-2">
+<header class="gn-container gn-3 gn-orange-active">
   <div class="gn-overlay"></div>
   <div class="gn-primary-nav">
     <div class="gn-primary-nav__row">
@@ -401,25 +401,25 @@ category: _templates
         <div class="gn-divided-row">
           <div class="gn-divided-row__item">
             <p class="gn-muted-text">EMEA | Americas | Asia-Pacific</p>
-            <h4 class="u-no-padding--top">
+            <h4 class="gn-heading-link">
               <a>Apply now&nbsp;&rsaquo;</a>
             </h4>
           </div>
           <div class="gn-divided-row__item">
             <p class="gn-muted-text">EMEA | Americas | Asia-Pacific</p>
-            <h4 class="u-no-padding--top">
+            <h4 class="gn-heading-link">
               <a>Apply now&nbsp;&rsaquo;</a>
             </h4>
           </div>
           <div class="gn-divided-row__item">
             <p class="gn-muted-text">EMEA | Americas | Asia-Pacific</p>
-            <h4 class="u-no-padding--top">
+            <h4 class="gn-heading-link">
               <a>Apply now&nbsp;&rsaquo;</a>
             </h4>
           </div>
           <div class="gn-divided-row__item">
             <p class="gn-muted-text">In every time zone</p>
-            <h4 class="u-no-padding--top">
+            <h4 class="gn-heading-link">
               <a>See all open roles&nbsp;&rsaquo;</a>
             </h4>
           </div>
@@ -498,23 +498,37 @@ category: _templates
   </div>
 </header>
 <div class="gn-controls">
-  <label class="js-small-switch">
-    Small variant
-    <input type="checkbox" class="p-switch">
-    <div class="p-switch__slider"></div>
-  </label>
-  <label for="secondary-active">Secondary active</label>
-  <select id="secondary-active">
-    <option value="none" selected="">None</option>
-    <option value="products">Products</option>
-    <option value="partners">Partners</option>
-    <option value="careers">Careers</option>
-  </select>
-  <label for="iteration">Iteration</label>
-  <select id="iteration">
-    <option value="gn-2" selected="">Iteration 2</option>
-    <option value="gn-1">Iteration 1</option>
-  </select>
+  <div>
+    <label class="js-small-switch">
+      Small variant
+      <input type="checkbox" class="p-switch">
+      <div class="p-switch__slider"></div>
+    </label>
+  </div>
+  <div>
+    <label for="secondary-active">Secondary active</label>
+    <select id="secondary-active">
+      <option value="none" selected="">None</option>
+      <option value="products">Products</option>
+      <option value="partners">Partners</option>
+      <option value="careers">Careers</option>
+    </select>
+  </div>
+  <div id="secondary-style-container">
+    <label for="secondary-style">Secondary nav style</label>
+    <select id="secondary-style">
+      <option value="gn-orange-active" selected="">Orange active</option>
+      <option value="gn-two-lines">Two lines</option>
+    </select>
+  </div>
+  <div>
+    <label for="iteration">Iteration</label>
+    <select id="iteration">
+      <option value="gn-3" selected="">Iteration 3</option>
+      <option value="gn-2">Iteration 2</option>
+      <option value="gn-1">Iteration 1</option>
+    </select>
+  </div>
 </div>
 
 <script>
@@ -528,6 +542,8 @@ category: _templates
   const smallToggle = document.querySelector('.js-small-switch');
   const secondarySelect = document.querySelector('#secondary-active');
   const iterationSelect = document.querySelector('#iteration');
+  const secondaryStyleContainer = document.querySelector('#secondary-style-container');
+  const secondaryStyle = document.querySelector('#secondary-style');
 
   const closeMenu = () => {
     primaryButtons.forEach(button => button.classList.remove('is-open'));
@@ -588,9 +604,23 @@ category: _templates
     }
   });
 
+  secondaryStyle.addEventListener('change', e => {
+    const { value } = e.target;
+    globalNav.classList.remove('gn-orange-active', 'gn-two-lines');
+    globalNav.classList.add(value);
+  });
+
   iterationSelect.addEventListener('change', e => {
-    globalNav.classList.remove('gn-1', 'gn-2');
-    globalNav.classList.add(e.target.value);
+    const { value } = e.target;
+
+    if (value === "gn-3") {
+      secondaryStyleContainer.classList.remove('u-hide');
+    } else {
+      secondaryStyleContainer.classList.add('u-hide');
+    }
+
+    globalNav.classList.remove('gn-1', 'gn-2', 'gn-3');
+    globalNav.classList.add(value);
   });
 
   secondaryLinks.forEach(link => {
